--- a/Ejercicio 8/8. Ejercicio.ipynb
+++ b/Ejercicio 8/8. Ejercicio.ipynb
@@ -5,48 +5,60 @@
    "execution_count": null,
    "id": "d0d34651",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'train_test_split' from 'sklearn.datasets' (/home/sdg/.local/lib/python3.10/site-packages/sklearn/datasets/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatasets\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_breast_cancer\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatasets\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StandardScaler\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlinear_model\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LogisticRegression\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'train_test_split' from 'sklearn.datasets' (/home/sdg/.local/lib/python3.10/site-packages/sklearn/datasets/__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "# --- PASO 1: Importa las bibliotecas necesarias ---\n",
     "# (Completa los espacios con las importaciones correctas)\n",
     "import numpy as np\n",
-    "from sklearn.datasets import ______\n",
-    "from sklearn.______ import train_test_split\n",
-    "from sklearn.______ import StandardScaler\n",
-    "from sklearn.linear_model import ______\n",
-    "from sklearn.______ import make_pipeline\n",
-    "from sklearn.metrics import ______\n",
-    "from sklearn.neighbors import ______\n",
+    "from sklearn.datasets import load_breast_cancer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
     "# --- PASO 2: Carga y divide los datos ---\n",
-    "data = ______.______()\n",
-    "X, y = ______, ______\n",
+    "data = load_breast_cancer()\n",
+    "X, y = data.data, data.data\n",
     "\n",
     "# Divide en train (60%), validation (20%) y test (20%) con estratificación\n",
     "X_temp, X_test, y_temp, y_test = train_test_split(\n",
-    "    ______, ______, \n",
-    "    test_size=______, \n",
-    "    stratify=______, \n",
+    "    X, y, \n",
+    "    test_size=0.6, \n",
+    "    stratify=y, \n",
     "    random_state=42\n",
     ")\n",
     "X_train, X_val, y_train, y_val = train_test_split(\n",
-    "    ______, ______, \n",
-    "    test_size=______,  # Calcula para que validation sea 20% del total\n",
-    "    stratify=______,\n",
+    "    X_temp, y_temp, \n",
+    "    test_size=0.25,  # Calcula para que validation sea 20% del total\n",
+    "    stratify=y_temp,\n",
     "    random_state=42\n",
     ")\n",
     "\n",
     "# --- PASO 3: Entrenamiento con pipeline ---\n",
     "# Crea un pipeline con StandardScaler y LogisticRegression\n",
     "pipe_lr = make_pipeline(\n",
-    "    ______(), \n",
-    "    ______(max_iter=1000)\n",
+    "    StandardScaler(), \n",
+    "    LogisticRegression(max_iter=1000)\n",
     ")\n",
     "\n",
     "# Crea un segundo pipeline con StandardScaler y KNeighborsClassifier (n_neighbors=5)\n",
-    "pipe_knn = ______(\n",
-    "    ______(),\n",
-    "    ______(n_neighbors=______)\n",
+    "pipe_knn = make_pipeline(\n",
+    "    StandardScaler(),\n",
+    "    KNeighborsClassifier(n_neighbors=5)\n",
     ")\n",
     "\n",
     "# Entrena ambos modelos\n",
@@ -85,8 +97,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
