--- a/taller 1/Punto 3 y 4.ipynb
+++ b/taller 1/Punto 3 y 4.ipynb
@@ -346,20 +346,13 @@
     "X = wine.data\n",
     "y = wine.target\n",
     "\n",
-    "# Escalamos los datos\n",
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
     "\n",
-    "# -------------------------\n",
-    "# a) Clustering jerárquico\n",
-    "# -------------------------\n",
     "agg = AgglomerativeClustering(n_clusters=3, linkage=\"ward\")\n",
     "labels = agg.fit_predict(X_scaled)\n",
     "\n",
-    "# -------------------------\n",
-    "# b) Dendrograma\n",
-    "# -------------------------\n",
-    "Z = linkage(X_scaled, method=\"ward\")  # matriz de linkage\n",
+    "Z = linkage(X_scaled, method=\"ward\")\n",
     "\n",
     "plt.figure(figsize=(12,6))\n",
     "dendrogram(Z, truncate_mode=\"level\", p=5)\n",
@@ -396,40 +389,33 @@
     }
    ],
    "source": [
-    "# 1) Dendrograma base (sin color_threshold arbitrario)\n",
     "plt.figure(figsize=(12,6))\n",
-    "dendrogram(Z, no_labels=True)   # no_labels=True para que quede más claro\n",
+    "dendrogram(Z, no_labels=True)\n",
     "plt.title(\"Dendrograma - cálculo automático de corte\")\n",
     "plt.xlabel(\"Muestras\")\n",
     "plt.ylabel(\"Distancia (altura)\")\n",
     "\n",
-    "# 2) Calcular alturas y diferencias\n",
-    "heights = Z[:, 2]               # la tercera columna de Z son las alturas de fusión\n",
-    "diffs = np.diff(heights)        # diferencias entre alturas consecutivas\n",
+    "heights = Z[:, 2]              \n",
+    "diffs = np.diff(heights)        \n",
     "\n",
-    "# Seguridad en caso extremo\n",
     "if diffs.size == 0:\n",
     "    cut_height = heights[0] if heights.size>0 else 0.0\n",
     "    k_opt = 1\n",
     "else:\n",
-    "    idx_max = np.argmax(diffs)                    # índice del mayor salto\n",
-    "    n_samples = Z.shape[0] + 1                    # Z tiene n-1 filas\n",
-    "    k_opt = n_samples - (idx_max + 1)             # fórmula: n - (idx+1)\n",
-    "    # altura de corte entre los dos saltos\n",
+    "    idx_max = np.argmax(diffs)                   \n",
+    "    n_samples = Z.shape[0] + 1                    \n",
+    "    k_opt = n_samples - (idx_max + 1)             \n",
     "    cut_height = (heights[idx_max] + heights[idx_max + 1]) / 2\n",
     "\n",
-    "# 3) Dibujar la línea de corte calculada\n",
     "plt.axhline(y=cut_height, color=\"red\", linestyle=\"--\", label=f\"Corte h={cut_height:.3f}\")\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
-    "# 4) Obtener clusters con fcluster usando la altura de corte\n",
     "clusters = fcluster(Z, t=cut_height, criterion='distance')\n",
     "n_clusters_found = np.unique(clusters).size\n",
     "\n",
     "print(f\"k* estimado por salto máximo: {k_opt}\")\n",
     "print(f\"Clusters encontrados con fcluster (corte a h={cut_height:.3f}): {n_clusters_found}\")\n",
-    "# opcional: ver el tamaño de cada cluster\n",
     "(unique, counts) = np.unique(clusters, return_counts=True)\n",
     "print(\"Tamaños de clusters (id : tamaño):\", dict(zip(unique, counts)))\n"
    ]
